[package]
authors = ["Evan New-Schmidt <evan@new-schmidt.com>"]
description = "A collaborative ascii art editor"
edition = "2018"
license = "AGPL-3.0-or-later"
name = "collascii"
repository = "https://github.com/newsch/collascii-rs/"
version = "0.0.0"

[dependencies]
anyhow = "1.*"
env_logger = "*"
log = "*"
pancurses = "*"
structopt = "*"
thiserror = "1.*"
